# fileFixer

./: .gitignore  CMakeLists.txt
include/: example.c  file.h  fixer.h  ring.h  worker.h
include/ring/: ring.h
src/: file.cpp  fixer.cpp  main.cpp  worker.cpp
